# robotics_cw2

./: .gitignore
src/: commit test.odt
src/com760cw2_group1/: CMakeLists.txt  package.xml
src/com760cw2_group1/launch/: launchTest.launch  simulationalg1.launch  simulationbug0.launch  simulationbug2.launch
src/com760cw2_group1/msg/: Action.msg  Reward.msg  State.msg
src/com760cw2_group1/scripts/: FollowWall.py  GoToPoint.py  alg1.py  alg1_1.py  bug0.py  bug2.py  gitkeep.txt  q_learning_nav.py  start_learning_client.py
src/com760cw2_group1/srv/: LearnNavigation.srv  group1SetBugStatus.srv
src/com760cw2_group1/urdf/: Group1Bot.gazebo.xacro  Group1Bot.urdf.xacro  group1Bot.gazebo  group1Bot.xacro
src/com760cw2_group1/world/: Group1World.world  RL_MazeWorld.world  empty_world.world
